--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.5.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "firebase-admin": "^11.10.1"
+    "firebase-admin": "^11.10.1",
+    "formidable": "^3.5.1",
+    "multer": "^1.4.5-lts.1"
   }
 }
